# slides-ddd

./: README.md  pyproject.toml
presentation/: 01_ddd.md  02_domain_model.md  03_building_blocks.md  04_application_structure.md  05_model.md  06_entity_object.py  07_value_object_enum.py  08_value_object_tuple.py  09_frozen.py  10_factory.py  11_resource.py  12_repository.py  13_repository_vs_active_record.md  14_repository_methods.py  15_unit_of_work.py  16_service.py  17_use_case.py  18_system.py  19_ddd_with_frameworks.py  20_anemic_domain.md  21_summary.md  22_references.md
