[project]
name = "ddd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.6",
    "attrs>=24.2.0",
    "fastapi>=0.115.5",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
]
